# OpenDeepResearch

./: .gitignore  README.md  pyproject.toml  setup_interactive.py
notebooks/: exp.ipynb  research_agent.ipynb  scoping_agent.ipynb  streaming_exp.ipynb  testing_models.ipynb
src/: config.py  types.py
src/deep_research_agent/: state.py
src/deep_research_agent/agents/: final_deep_research_agent.py  research_agent.py  scoping.py  scoping_agent.py  supervisor_agent.py
src/deep_research_agent/prompts/: clarify_with_user_instruction.jinja  compress_research_human_prompt.jinja  compress_research_system_prompt.jinja  final_report_generation_prompt.jinja  lead_researcher_prompt.jinja  research_agent_system_prompt.jinja  summarize_webpage_prompt.jinja  test.jinja  write_research_brief_from_messages.jinja
src/deep_research_agent/tools/: conduct_research_tool.py  research_complete_tool.py  search_tool.py  think_tool.py
src/research_planning_offloading_agent/: state.py
src/research_planning_offloading_agent/agents/: research_agent.py  research_sub_agent.py
src/research_planning_offloading_agent/tools/: common_tools.py  file_tools.py  search_tools.py  task_tools.py  todo_tools.py
src/scripts/: run_streaming_agent.py
src/utils/: helpers.py  models.py  notebook_utils.py  stream.py
src/web_app/: modularized_chat_app.py  streamlit_chat_app.py  streamlit_chat_app_streaming.py  streamlit_chat_app_streaming_agent.py  streamlit_chat_app_streaming_emulator.py  streamlit_deepresearch_chat_app.py
(+10 files in other folders)
